// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING ChatItemTargetText RENDER continuous should match snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
      "maxWidth": 300,
      "paddingLeft": 60,
      "paddingRight": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#88CDD0",
        },
        Object {
          "borderRadius": 8,
          "borderTopEndRadius": 0,
          "flex": 1,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 19.36,
          "marginBottom": 4,
        }
      }
    >
      message
    </Text>
    <View
      style={
        Object {
          "alignSelf": "flex-end",
          "bottom": 6,
          "position": "absolute",
          "right": 8,
        }
      }
    >
      <View />
    </View>
  </View>
  <View
    style={
      Object {
        "borderRadius": 12,
        "height": 24,
        "marginLeft": 8,
        "width": 24,
      }
    }
  />
</View>
`;

exports[`TESTING ChatItemTargetText RENDER not continuous should match snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
      "maxWidth": 300,
      "paddingLeft": 60,
      "paddingRight": 10,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#88CDD0",
        },
        Object {
          "borderRadius": 8,
          "borderTopEndRadius": 0,
          "flex": 1,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "fontFamily": "Inter-SemiBold",
            "fontSize": 12,
            "lineHeight": 19.36,
          }
        }
      >
        username
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#000000",
            "borderRadius": 2,
            "height": 3,
            "marginLeft": 5,
            "marginRight": 5,
            "width": 3,
          }
        }
      />
      <Text
        style={
          Object {
            "alignSelf": "center",
            "fontFamily": "Inter-ExtraLight",
            "fontSize": 10,
            "lineHeight": 12.19,
          }
        }
      >
        time
      </Text>
    </View>
    <Text
      style={
        Object {
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 19.36,
          "marginBottom": 4,
        }
      }
    >
      message
    </Text>
    <View
      style={
        Object {
          "alignSelf": "flex-end",
          "bottom": 6,
          "position": "absolute",
          "right": 8,
        }
      }
    >
      <View />
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 8,
      }
    }
  >
    https://www.google.com
  </View>
</View>
`;
